This reverts commit 82b4623baffbf533864bf1ac031946935ad7b2d3.

--- a/aula11/ex009.html
+++ b/aula11/ex009.html
@@ -15,10 +15,7 @@
 
         input[type="button"] {
             padding: 4px 7px;
-            box-shadow: 1px 1px 4px rgba(79, 30, 170, 0.788);
-            background-color: rgba(167, 116, 214, 0.281);
-            border: none;
-            color: purple;
+            box-shadow: 1px 1px 4px rgba(137, 95, 216, 0.788);
         }
     </style>
 </head>
@@ -35,7 +32,7 @@
             var resultado = window.document.getElementById('resultado')
 
             var txtna = window.document.getElementById('txtna')
-            var nacionalidade = txtna.value.toLowerCase();
+            var nacionalidade = txtna.value.toLowerCase;
 
             if (nacionalidade === "brasileira" || nacionalidade === "brasileiro") {
                 resultado.innerHTML = (`<p>você é <strong>${nacionalidade}!</strong></p>`)
